--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.3"
