--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,64 +1,87 @@
 name: Build
 
 on:
-  push:
-    tags:
-      - "v*"
+    push:
+        tags:
+            - "v*"
 
 jobs:
-  create-release:
-    name: Build and Create Tagged release
-    runs-on: ubuntu-latest
+    create-release:
+        name: Build and Create Tagged release
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Install archive tools
-        run: sudo apt install zip
+        steps:
+            - name: Install archive tools
+              run: sudo apt install zip
 
-      - name: Checkout source code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          ref: ${{ github.ref }}
+            - name: Checkout source code
+              uses: actions/checkout@v2
+              with:
+                  fetch-depth: 0
+                  ref: ${{ github.ref }}
 
-      - name: Get variables
-        id: get_vars
-        run: |
-          echo '::set-output name=SHORT_SHA::$(git rev-parse --short HEAD)'
-          echo '::set-output name=DATE::$(date +'%D')'
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16.x
-          cache: "yarn"
-          cache-dependency-path: "web/yarn.lock"
+            - name: Get variables
+              id: get_vars
+              run: |
+                  echo '::set-output name=SHORT_SHA::$(git rev-parse --short HEAD)'
+                  echo '::set-output name=DATE::$(date +'%D')'
+            - name: Setup node
+              uses: actions/setup-node@v2
+              with:
+                  node-version: 16.x
+                  cache: "yarn"
+                  cache-dependency-path: "web/yarn.lock"
 
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-        working-directory: web
+            - name: Install dependencies
+              run: yarn --frozen-lockfile
+              working-directory: web
 
-      - name: Run build
-        run: yarn build
-        working-directory: web
-        env:
-          CI: false
+            - name: Run build
+              run: yarn build
+              working-directory: web
+              env:
+                  CI: false
 
-      - name: Bundle files
-        run: |
-          mkdir -p ./temp/ox_core
-          mkdir -p ./temp/ox_core/web
-          cp ./{LICENSE,README.md,database.sql,fxmanifest.lua,imports.lua} ./temp/ox_core
-          cp -r ./{client,server,shared} ./temp/ox_core
-          cp -r ./web/build ./temp/ox_core/web/build
-          cd ./temp && zip -r ../ox_core.zip ./ox_core
-      - name: Create Release
-        uses: "marvinpinto/action-automatic-releases@v1.2.1"
-        id: auto_release
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          title: "${{ env.RELEASE_VERSION }}"
-          prerelease: false
-          files: ox_core.zip
+            - name: Bundle files
+              run: |
+                  mkdir -p ./temp/ox_core
+                  mkdir -p ./temp/ox_core/web
+                  cp ./{LICENSE,README.md,database.sql,fxmanifest.lua,imports.lua} ./temp/ox_core
+                  cp -r ./{client,server,shared} ./temp/ox_core
+                  cp -r ./web/build ./temp/ox_core/web/build
+                  cd ./temp && zip -r ../ox_core.zip ./ox_core
+            - name: Create Release
+              uses: "marvinpinto/action-automatic-releases@v1.2.1"
+              id: auto_release
+              with:
+                  repo_token: "${{ secrets.GITHUB_TOKEN }}"
+                  title: "${{ env.RELEASE_VERSION }}"
+                  prerelease: false
+                  files: ox_core.zip
 
-        env:
-          CI: false
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              env:
+                  CI: false
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    bump-manifest-version:
+        name: "Bump fxmanifest version"
+        needs: create-release
+        runs-on: ubuntu-latest
+        steps:
+            - name: Get tag
+              run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+            - name: Checkout
+              uses: actions/checkout@v2
+              with:
+                  ref: ${{ github.event.repository.default_branch }}
+            - name: Bump manifest version
+              run: node .github/actions/bump-manifest-version.js
+              env:
+                  TGT_RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
+            - name: Push manifest change
+              uses: EndBug/add-and-commit@v8
+              with:
+                  add: fxmanifest.lua
+                  push: true
+                  author_name: Manifest Bumper
+                  author_email: 41898282+github-actions[bot]@users.noreply.github.com
+                  message: "chore(bump-manifest): Bump manifest version to ${{ env.RELEASE_VERSION }}"
