--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,11 @@ jobs:
                   fetch-depth: 0
                   ref: ${{ github.ref }}
 
+            - name: Install pnpm
+              uses: pnpm/action-setup@v2.0.1
+              with:
+                  version: 6.20.3
+
             - name: Get variables
               id: get_vars
               run: |
@@ -29,15 +34,15 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: 16.x
-                  cache: "yarn"
-                  cache-dependency-path: "web/yarn.lock"
+                  cache: "pnpm"
+                  cache-dependency-path: "web/pnpm-lock.yaml"
 
             - name: Install dependencies
-              run: yarn --frozen-lockfile
+              run: pnpm i
               working-directory: web
 
             - name: Run build
-              run: yarn build
+              run: pnpm build
               working-directory: web
               env:
                   CI: false
@@ -46,8 +51,8 @@ jobs:
               run: |
                   mkdir -p ./temp/ox_core
                   mkdir -p ./temp/ox_core/web
-                  cp ./{LICENSE,README.md,database.sql,fxmanifest.lua,imports.lua} ./temp/ox_core
-                  cp -r ./{client,server,shared} ./temp/ox_core
+                  cp ./{LICENSE,README.md,database.sql,fxmanifest.lua} ./temp/ox_core
+                  cp -r ./{client,server,shared,imports} ./temp/ox_core
                   cp -r ./web/build ./temp/ox_core/web/build
                   cd ./temp && zip -r ../ox_core.zip ./ox_core
             - name: Create Release
@@ -62,26 +67,3 @@ jobs:
               env:
                   CI: false
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    bump-manifest-version:
-        name: "Bump fxmanifest version"
-        needs: create-release
-        runs-on: ubuntu-latest
-        steps:
-            - name: Get tag
-              run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-            - name: Checkout
-              uses: actions/checkout@v2
-              with:
-                  ref: ${{ github.event.repository.default_branch }}
-            - name: Bump manifest version
-              run: node .github/actions/bump-manifest-version.js
-              env:
-                  TGT_RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
-            - name: Push manifest change
-              uses: EndBug/add-and-commit@v8
-              with:
-                  add: fxmanifest.lua
-                  push: true
-                  author_name: Manifest Bumper
-                  author_email: 41898282+github-actions[bot]@users.noreply.github.com
-                  message: "chore(bump-manifest): Bump manifest version to ${{ env.RELEASE_VERSION }}"
