--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build
 on:
     push:
         tags:
-            - "v*"
+            - "v*.*.*"
 
 jobs:
     create-release:
@@ -18,7 +18,7 @@ jobs:
               uses: actions/checkout@v2
               with:
                   fetch-depth: 0
-                  ref: ${{ github.ref }}
+                  ref: ${{ github.event.repository.default_branch }}
 
             - name: Install pnpm
               uses: pnpm/action-setup@v2.0.1
@@ -30,6 +30,7 @@ jobs:
               run: |
                   echo '::set-output name=SHORT_SHA::$(git rev-parse --short HEAD)'
                   echo '::set-output name=DATE::$(date +'%D')'
+
             - name: Setup node
               uses: actions/setup-node@v2
               with:
@@ -46,6 +47,25 @@ jobs:
               working-directory: web
               env:
                   CI: false
+
+            - name: Bump manifest version
+              run: node .github/actions/bump-manifest-version.js
+              env:
+                  TGT_RELEASE_VERSION: ${{ github.ref_name }}
+
+            - name: Push manifest change
+              uses: EndBug/add-and-commit@v8
+              with:
+                  add: fxmanifest.lua
+                  push: true
+                  author_name: Manifest Bumper
+                  author_email: 41898282+github-actions[bot]@users.noreply.github.com
+                  message: "chore: bump manifest version to ${{ github.ref_name }}"
+
+            - name: Update tag ref
+              uses: EndBug/latest-tag@latest
+              with:
+                tag-name: ${{ github.ref_name }}
 
             - name: Bundle files
               run: |
