--- a/web/package.json
+++ b/web/package.json
@@ -14,21 +14,21 @@
     "@types/node": "^16.11.18",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@vitejs/plugin-react": "^1.3.2",
     "framer-motion": "5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
+    "vite": "^2.9.13",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "cross-env PUBLIC_URL=/ craco start",
-    "start:game": "cross-env IN_GAME_DEV=1 craco start",
-    "build": "rimraf build && craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "start:game": "vite build --watch",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -49,8 +49,10 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.3",
+    "@babel/core": ">=7.0.0 <8.0.0",
+    "@testing-library/dom": "^8.14.0",
     "cross-env": "^7.0.3",
     "rimraf": "^3.0.2"
   }
 }
+
