--- a/lib/package.json
+++ b/lib/package.json
@@ -21,6 +21,7 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
+    "@citizenfx/client": "2.0.5722-1",
     "@citizenfx/server": "2.0.5722-1",
     "@types/node": "^18.0.3",
     "typescript": "^4.7.4"
