--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -4,16 +4,16 @@
     "outDir": ".",
     "strict": true,
     "module": "CommonJS",
-    "types": ["@citizenfx/server", "@types/node"],
+    "types": ["@citizenfx/client", "@citizenfx/server", "@types/node"],
     "declaration": true,
     "sourceMap": true,
     "target": "ESNext",
-    "allowJs": true,
+    "allowJs": false,
     "lib": ["ESNext"],
     "noEmitOnError": false,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "rootDir": ".",
+    "skipLibCheck": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "noImplicitAny": false,
