--- a/lib/package.json
+++ b/lib/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@overextended/ox_core",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "author": "Overextended",
+  "description": "Player and vehicle wrapper for ox_core",
   "types": "./server/index.d.ts",
   "scripts": {
     "prepublish": "tsc"
@@ -27,4 +28,3 @@
     "typescript": "^4.7.4"
   }
 }
-
