--- a/lib/package.json
+++ b/lib/package.json
@@ -22,9 +22,9 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
-    "@citizenfx/client": "2.0.5722-1",
-    "@citizenfx/server": "2.0.5722-1",
-    "@types/node": "^18.0.3",
+    "@citizenfx/client": "latest",
+    "@citizenfx/server": "latest",
+    "@types/node": "^16.9.1",
     "typescript": "^4.7.4"
   }
 }
