--- a/web/package.json
+++ b/web/package.json
@@ -3,56 +3,28 @@
   "version": "1.0.0",
   "homepage": "web/build",
   "private": true,
-  "dependencies": {
-    "@chakra-ui/react": "^1.8.1",
-    "@emotion/react": "11",
-    "@emotion/styled": "11",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.11.18",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@vitejs/plugin-react": "^1.3.2",
-    "framer-motion": "5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^6.2.1",
-    "typescript": "^4.5.5",
-    "vite": "^2.9.13",
-    "web-vitals": "^2.1.3"
-  },
   "scripts": {
     "start": "vite",
     "start:game": "vite build --watch",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@headlessui/react": "^1.7.4",
+    "@tabler/icons": "^1.112.0",
+    "autoprefixer": "^10.4.13",
+    "jotai": "^1.10.0",
+    "postcss": "^8.4.19",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
-    "@babel/core": ">=7.0.0 <8.0.0",
-    "@testing-library/dom": "^8.14.0",
-    "cross-env": "^7.0.3",
-    "rimraf": "^3.0.2"
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.9"
   }
 }
-
