--- a/web/.prettierrc
+++ b/web/.prettierrc
@@ -5,5 +5,8 @@
   "tabWidth": 2,
   "semi": true,
   "bracketSpacing": true,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
