--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
