--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.4.19",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.39.5",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
