--- a/web/package.json
+++ b/web/package.json
@@ -4,25 +4,25 @@
   "homepage": "web/build",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^1.8.1",
-    "@emotion/react": "11",
-    "@emotion/styled": "11",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@chakra-ui/react": "^1.8.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^26.0.24",
-    "@types/node": "^16.11.18",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "@types/node": "^16.18.3",
+    "@types/react": "^17.0.52",
+    "@types/react-dom": "^17.0.18",
     "@vitejs/plugin-react": "^1.3.2",
-    "framer-motion": "5",
+    "framer-motion": "^5.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^6.2.1",
-    "typescript": "^4.5.5",
-    "vite": "^2.9.13",
-    "web-vitals": "^2.1.3"
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.4.3",
+    "typescript": "^4.9.3",
+    "vite": "^2.9.15",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "vite",
@@ -49,10 +49,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": ">=7.0.0 <8.0.0",
-    "@testing-library/dom": "^8.14.0",
+    "@babel/core": "^7.20.5",
+    "@testing-library/dom": "^8.19.0",
     "cross-env": "^7.0.3",
     "rimraf": "^3.0.2"
   }
 }
-
