--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
           cache-dependency-path: 'web/pnpm-lock.yaml'
 
       - name: Install dependencies
-        run: pnpm i
+        run: pnpm i --frozen-lockfile
         working-directory: web
 
       - name: Bump package version
