--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.39.5",
+    "react-tooltip": "^4.5.1",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
