--- a/.luarc.json
+++ b/.luarc.json
@@ -1,3 +1,3 @@
 {
-  "workspace.ignoreDir": ["imports", "lib", "web"]
+  "workspace.ignoreDir": ["imports", "lib", "web", ".github", ".vscode", ".git"]
 }
