--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
-  "name": "ts",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "you",
+  "name": "@overextended/ox_core",
+  "author": "Overextended",
+  "version": "0.20.0",
   "license": "LGPL-3.0-or-later",
+  "description": "A modern FiveM framework.",
   "type": "module",
   "scripts": {
     "build": "node build.js --mode=production",
     "watch": "node build.js"
   },
+  "keywords": [
+    "fivem",
+    "ox_core",
+    "ox",
+    "overextended"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/overextended/ox_core.git"
+  },
+  "bugs": "https://github.com/overextended/ox_core/issues",
   "devDependencies": {
     "@citizenfx/client": "2.0.7257-1",
     "@citizenfx/server": "2.0.7257-1",
@@ -20,5 +31,8 @@
   "dependencies": {
     "@overextended/ox_lib": "^3.14.1",
     "mariadb": "^3.2.3"
+  },
+  "engines": {
+    "node": ">=16.9.1"
   }
 }
