feat(server/player): player filtering
Includes some refactoring for strict null checks.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "rootDir": ".",
     "noImplicitAny": true,
+    "strictNullChecks": true,
     "module": "es2020",
     "target": "es2021",
     "lib": ["es2021", "esnext.disposable"],
