ci(release): disable git-tag-version on pnpm version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          pnpm version ${{ github.ref_name }}
+          pnpm version ${{ github.ref_name }} --git-tag-version false
 
       - name: Publish npm package
         uses: JS-DevTools/npm-publish@v1
