--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           mkdir -p ./temp/ox_core/common
           cp ./{LICENSE,README.md,fxmanifest.lua} ./temp/ox_core
-          cp -r ./{imports,lib,locales,sql,dist} ./temp/ox_core
+          cp -r ./{lib,locales,sql,dist} ./temp/ox_core
           cp -r ./common/data ./temp/ox_core/common/data
           cd ./temp && zip -r ../ox_core.zip ./ox_core
 
