refactor(build): use fx-utils

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "./server": "./package/lib/server/index.js"
   },
   "scripts": {
-    "build": "node build.js --mode=production",
-    "watch": "node build.js"
+    "build": "node build.js",
+    "watch": "node build.js --watch"
   },
   "keywords": [
     "fivem",
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@nativewrappers/fivem": "^0.0.41",
+    "@overextended/fx-utils": "github:overextended/fx-utils",
     "@overextended/ox_lib": "^3.25.0",
     "mariadb": "^3.3.1"
   },
